[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/icons/Remove.svg" type="Texture" id=1]
[ext_resource path="res://scripts/ui_components/ModelItem.gd" type="Script" id=2]
[ext_resource path="res://assets/icons/icon_down.svg" type="Texture" id=3]
[ext_resource path="res://assets/icons/icon_increase.svg" type="Texture" id=4]
[ext_resource path="res://scenes/ui_components/ModelTransform.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/themes/dark_base.tres" type="Theme" id=6]

[sub_resource type="Theme" id=2]
CheckButton/icons/off = ExtResource( 4 )
CheckButton/icons/on = ExtResource( 3 )

[node name="ModelItem" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 4.0
margin_right = 1018.0
margin_bottom = 596.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1012.0
margin_bottom = 24.0

[node name="Fold" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 27.0
margin_bottom = 24.0
hint_tooltip = "Show / hide model properties"
size_flags_vertical = 3
theme = SubResource( 2 )

[node name="Model_Name" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 31.0
margin_right = 980.0
margin_bottom = 24.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 7
text = "PLACEHOLDER MODEL NAME"
valign = 1
clip_text = true

[node name="Delete" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 984.0
margin_right = 1012.0
margin_bottom = 24.0
hint_tooltip = "Remove model"
size_flags_vertical = 3
icon = ExtResource( 1 )
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 1012.0
margin_bottom = 592.0
size_flags_vertical = 3

[node name="ModelTransform" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1012.0
margin_bottom = 538.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 542.0
margin_right = 1012.0
margin_bottom = 564.0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 908.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Material"

[node name="material_override" type="OptionButton" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 912.0
margin_right = 1012.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 0 )
clip_text = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Fold" to="." method="fold_item"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Delete" to="." method="delete_model"]
[connection signal="model_position_changed" from="VBoxContainer/VBoxContainer/ModelTransform" to="." method="set_model_position"]
[connection signal="model_rotation_changed" from="VBoxContainer/VBoxContainer/ModelTransform" to="." method="set_model_rotation"]
[connection signal="model_scale_changed" from="VBoxContainer/VBoxContainer/ModelTransform" to="." method="set_model_scale"]
[connection signal="item_selected" from="VBoxContainer/VBoxContainer/HBoxContainer/material_override" to="." method="set_model_material_override"]
